--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#current-and-resistance" raw="## Current and Resistance" lo="297">
+            <a href="#current-and-resistance" raw="## Current and Resistance" lo="297" class="">
               <span class="toctext">Current and Resistance</span>
             </a>
           </li>
@@ -667,7 +667,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#equivalent-resistance" raw="## Equivalent Resistance" lo="327" class="highlighted">
+            <a href="#equivalent-resistance" raw="## Equivalent Resistance" lo="327" class="">
               <span class="toctext">Equivalent Resistance</span>
             </a>
           </li>
@@ -1673,7 +1673,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="297" lf="297"><a name="current-and-resistance" number="4.14" lo="297" raw="## Current and Resistance" class="anchor hanchor" href="#current-and-resistance"><span class="hnumber">4.14</span>&nbsp;<span class="htext">Current and Resistance</span></a></h2>
+        <h2 lo="297" lf="297" class=""><a name="current-and-resistance" number="4.14" lo="297" raw="## Current and Resistance" class="anchor hanchor" href="#current-and-resistance"><span class="hnumber">4.14</span>&nbsp;<span class="htext">Current and Resistance</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">297</span></div>
       </div>
       <div class="block">
@@ -1693,7 +1693,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="305" lf="311">
                   <div class="block">
-                    <p padlength="0" lo="305" lf="309">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Current_and_Resistance">Github</a> | <a href="Current_and_Resistance/Current_and_Resistance.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="305" lf="309" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Current_and_Resistance">Github</a> | <a href="Current_and_Resistance/Current_and_Resistance.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">305-309</span></div>
                   </div>
                 </li>
@@ -1753,7 +1753,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="327" lf="327" class="highlighted"><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
+        <h2 lo="327" lf="327" class=""><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">327</span></div>
       </div>
       <div class="block">
@@ -1767,7 +1767,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="330" lf="339" class="compact">
                 <li markerlength="2" padlength="0" lo="330" lf="334" class="">
                   <div class="block">
-                    <p padlength="0" lo="330" lf="334" class="active">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
+                    <p padlength="0" lo="330" lf="334" class="">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">330-334</span></div>
                   </div>
                 </li>
@@ -1787,7 +1787,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="341" lf="341"><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits" lf="341"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
+        <h2 lo="341" lf="341" class="highlighted"><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor active" href="#rc-circuits" lf="341"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">342</span></div>
       </div>
       <div class="block">
@@ -1807,7 +1807,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="349" lf="355">
                   <div class="block">
-                    <p padlength="0" lo="349" lf="353">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="349" lf="353" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">350-354</span></div>
                   </div>
                 </li>
@@ -1821,76 +1821,76 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="355" lf="355"><a name="lorentz-force-law" number="4.18" lo="355" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="355"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="355" lf="355" class=""><a name="magnetic-force-on-charged-particles" number="4.18" lo="355" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles" lf="355"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">356</span></div>
       </div>
       <div class="block">
         <ul lo="357" lf="368" class="compact">
-          <li markerlength="2" padlength="0" lo="357" lf="370">
+          <li markerlength="2" padlength="0" lo="357" lf="368" class="">
             <div class="block">
-              <p padlength="0" lo="357" lf="357">Activity - Lorentz Force on Charged Particles</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">358</span></div>
+              <p padlength="0" lo="357" lf="357" class="">Activity - Magnetic Force on Charged Particles</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">357</span></div>
             </div>
             <div class="block">
               <ul lo="358" lf="368" class="compact">
-                <li markerlength="2" padlength="0" lo="358" lf="358">
+                <li markerlength="2" padlength="0" lo="358" lf="358" class="">
                   <div class="block">
-                    <p padlength="0" lo="358" lf="358"><a href="Lorentz_Force/README.html">Instructor notes</a></p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">359</span></div>
+                    <p padlength="0" lo="358" lf="358" class=""><a href="Magnetic_Force/README.html">Instructor notes</a></p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">358</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="359" lf="363">
+                <li markerlength="2" padlength="0" lo="359" lf="363" class="">
                   <div class="block">
-                    <p padlength="0" lo="359" lf="363">Documents: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force/Lorentz_Force.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">360-364</span></div>
+                    <p padlength="0" lo="359" lf="363" class="">Documents: | <a href="(Magnetic_Force/(Magnetic_Force.pdf">pdf</a> | <a href="(Magnetic_Force/(Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="(Magnetic_Force/(Magnetic_Force.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">359-363</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="364" lf="370">
+                <li markerlength="2" padlength="0" lo="364" lf="368" class="">
                   <div class="block">
-                    <p padlength="0" lo="364" lf="368">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force/Lorentz_Force.md!" target="_blank">Markdown</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">365-369</span></div>
+                    <p padlength="0" lo="364" lf="368" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="(Magnetic_Force/(Magnetic_Force.md">Markdown</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">364-368</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">359-369</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">358-368</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">358-369</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">357-368</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="370" lf="370"><a name="lorentz-force-law-on-wires" number="4.19" lo="370" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires" lf="370"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <h2 lo="370" lf="370" class=""><a name="magnetic-force-on-wires" number="4.19" lo="370" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires" lf="370"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">371</span></div>
       </div>
       <div class="block">
         <ul lo="372" lf="382" class="compact">
-          <li markerlength="2" padlength="0" lo="372" lf="377">
+          <li markerlength="2" padlength="0" lo="372" lf="377" class="">
             <div class="block">
-              <p padlength="0" lo="372" lf="372">Activity - Lorentz Force on Wires</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">373</span></div>
+              <p padlength="0" lo="372" lf="372" class="">Activity - Magnetic Force on Wires</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">372</span></div>
             </div>
             <div class="block">
               <ul lo="373" lf="377" class="compact">
-                <li markerlength="2" padlength="0" lo="373" lf="377">
+                <li markerlength="2" padlength="0" lo="373" lf="377" class="">
                   <div class="block">
-                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">374-378</span></div>
+                    <p padlength="0" lo="373" lf="377" class="">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">374-378</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="378" lf="384">
+          <li markerlength="2" padlength="0" lo="378" lf="382" class="">
             <div class="block">
-              <p padlength="0" lo="378" lf="382">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">379-383</span></div>
+              <p padlength="0" lo="378" lf="382" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">373-383</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">372-382</span></div>
       </div>
     </div>
     <div class="section">
