--- a/index.html
+++ b/index.html
@@ -657,42 +657,42 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#current-and-resistance" raw="## Current and Resistance" lo="297" class="">
+            <a href="#current-and-resistance" raw="## Current and Resistance" lo="297">
               <span class="toctext">Current and Resistance</span>
             </a>
           </li>
           <li>
-            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="311" class="">
+            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="311">
               <span class="toctext">Kirchhoff’s Circuit Laws</span>
             </a>
           </li>
           <li>
-            <a href="#equivalent-resistance" raw="## Equivalent Resistance" lo="327" class="">
+            <a href="#equivalent-resistance" raw="## Equivalent Resistance" lo="327">
               <span class="toctext">Equivalent Resistance</span>
             </a>
           </li>
           <li>
-            <a href="#rc-circuits" raw="## RC Circuits" lo="342">
+            <a href="#rc-circuits" raw="## RC Circuits" lo="341" class="">
               <span class="toctext">RC Circuits</span>
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law" raw="## Lorentz Force Law" lo="356">
-              <span class="toctext">Lorentz Force Law</span>
+            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="355" class="highlighted">
+              <span class="toctext">Magnetic Force on Charged Particles</span>
             </a>
           </li>
           <li>
-            <a href="#lorentz-force-law-on-wires" raw="## Lorentz Force Law on Wires" lo="371">
-              <span class="toctext">Lorentz Force Law on Wires</span>
+            <a href="#magnetic-force-on-wires" raw="## Magnetic Force on Wires" lo="370">
+              <span class="toctext">Magnetic Force on Wires</span>
             </a>
           </li>
           <li>
-            <a href="#the-biot-savart-law" raw="## The Biot--Savart law" lo="385">
+            <a href="#the-biot-savart-law" raw="## The Biot--Savart law" lo="384">
               <span class="toctext">The Biot–Savart law</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="387">
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="386">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -1673,7 +1673,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="297" lf="297" class=""><a name="current-and-resistance" number="4.14" lo="297" raw="## Current and Resistance" class="anchor hanchor" href="#current-and-resistance"><span class="hnumber">4.14</span>&nbsp;<span class="htext">Current and Resistance</span></a></h2>
+        <h2 lo="297" lf="297"><a name="current-and-resistance" number="4.14" lo="297" raw="## Current and Resistance" class="anchor hanchor" href="#current-and-resistance"><span class="hnumber">4.14</span>&nbsp;<span class="htext">Current and Resistance</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">297</span></div>
       </div>
       <div class="block">
@@ -1693,7 +1693,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="305" lf="311">
                   <div class="block">
-                    <p padlength="0" lo="305" lf="309" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Current_and_Resistance">Github</a> | <a href="Current_and_Resistance/Current_and_Resistance.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="305" lf="309">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Current_and_Resistance">Github</a> | <a href="Current_and_Resistance/Current_and_Resistance.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">305-309</span></div>
                   </div>
                 </li>
@@ -1707,14 +1707,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="311" lf="311" class=""><a name="kirchhoff-s-circuit-laws" number="4.15" lo="311" raw="## Kirchhoff's Circuit Laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">4.15</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
+        <h2 lo="311" lf="311"><a name="kirchhoff-s-circuit-laws" number="4.15" lo="311" raw="## Kirchhoff's Circuit Laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">4.15</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">311</span></div>
       </div>
       <div class="block">
         <ul lo="313" lf="325" class="compact">
           <li markerlength="2" padlength="0" lo="313" lf="327">
             <div class="block">
-              <p padlength="0" lo="313" lf="313" class="">Activity - Using KVL and KCL</p>
+              <p padlength="0" lo="313" lf="313">Activity - Using KVL and KCL</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">313</span></div>
             </div>
             <div class="block">
@@ -1753,27 +1753,27 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="327" lf="327" class=""><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
+        <h2 lo="327" lf="327"><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">327</span></div>
       </div>
       <div class="block">
         <ul lo="329" lf="339" class="compact">
-          <li markerlength="2" padlength="0" lo="329" lf="339" class="">
+          <li markerlength="2" padlength="0" lo="329" lf="341">
             <div class="block">
-              <p padlength="0" lo="329" lf="329" class="">Activity - Using KVL and KCL</p>
+              <p padlength="0" lo="329" lf="329">Activity - Using KVL and KCL</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">329</span></div>
             </div>
             <div class="block">
               <ul lo="330" lf="339" class="compact">
-                <li markerlength="2" padlength="0" lo="330" lf="334" class="">
+                <li markerlength="2" padlength="0" lo="330" lf="334">
                   <div class="block">
-                    <p padlength="0" lo="330" lf="334" class="">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
+                    <p padlength="0" lo="330" lf="334">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">330-334</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="335" lf="339" class="">
+                <li markerlength="2" padlength="0" lo="335" lf="341">
                   <div class="block">
-                    <p padlength="0" lo="335" lf="339" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Equivalent_Resistance">Github</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.md">Markdown</a> |</p>
+                    <p padlength="0" lo="335" lf="339">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Equivalent_Resistance">Github</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">335-339</span></div>
                   </div>
                 </li>
@@ -1787,42 +1787,42 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="341" lf="341" class="highlighted"><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor active" href="#rc-circuits" lf="341"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">342</span></div>
+        <h2 lo="341" lf="341" class=""><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">341</span></div>
       </div>
       <div class="block">
         <ul lo="343" lf="353" class="compact">
           <li markerlength="2" padlength="0" lo="343" lf="355">
             <div class="block">
               <p padlength="0" lo="343" lf="343">Activity</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">344</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">343</span></div>
             </div>
             <div class="block">
               <ul lo="344" lf="353" class="compact">
                 <li markerlength="2" padlength="0" lo="344" lf="348">
                   <div class="block">
                     <p padlength="0" lo="344" lf="348">Documents: | <a href="RC_Circuits/RC_Circuits.pdf">pdf</a> | <a href="RC_Circuits/RC_Circuits-solutions.pdf">pdf solns</a> | <a href="RC_Circuits/RC_Circuits.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">345-349</span></div>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">344-348</span></div>
                   </div>
                 </li>
                 <li markerlength="2" padlength="0" lo="349" lf="355">
                   <div class="block">
-                    <p padlength="0" lo="349" lf="353" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">350-354</span></div>
+                    <p padlength="0" lo="349" lf="353">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">349-353</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">345-354</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">344-353</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">344-354</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">343-353</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="355" lf="355" class=""><a name="magnetic-force-on-charged-particles" number="4.18" lo="355" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles" lf="355"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">356</span></div>
+        <h2 lo="355" lf="355" class="highlighted"><a name="magnetic-force-on-charged-particles" number="4.18" lo="355" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">355</span></div>
       </div>
       <div class="block">
         <ul lo="357" lf="368" class="compact">
@@ -1841,7 +1841,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="359" lf="363" class="">
                   <div class="block">
-                    <p padlength="0" lo="359" lf="363" class="">Documents: | <a href="(Magnetic_Force/(Magnetic_Force.pdf">pdf</a> | <a href="(Magnetic_Force/(Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="(Magnetic_Force/(Magnetic_Force.html">html</a> |</p>
+                    <p padlength="0" lo="359" lf="363" class="active">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">359-363</span></div>
                   </div>
                 </li>
@@ -1861,21 +1861,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="370" lf="370" class=""><a name="magnetic-force-on-wires" number="4.19" lo="370" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires" lf="370"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">371</span></div>
+        <h2 lo="370" lf="370"><a name="magnetic-force-on-wires" number="4.19" lo="370" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">370</span></div>
       </div>
       <div class="block">
         <ul lo="372" lf="382" class="compact">
-          <li markerlength="2" padlength="0" lo="372" lf="377" class="">
+          <li markerlength="2" padlength="0" lo="372" lf="377">
             <div class="block">
-              <p padlength="0" lo="372" lf="372" class="">Activity - Magnetic Force on Wires</p>
+              <p padlength="0" lo="372" lf="372">Activity - Magnetic Force on Wires</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">372</span></div>
             </div>
             <div class="block">
               <ul lo="373" lf="377" class="compact">
-                <li markerlength="2" padlength="0" lo="373" lf="377" class="">
+                <li markerlength="2" padlength="0" lo="373" lf="377">
                   <div class="block">
-                    <p padlength="0" lo="373" lf="377" class="">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
+                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
                   </div>
                 </li>
@@ -1883,9 +1883,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="378" lf="382" class="">
+          <li markerlength="2" padlength="0" lo="378" lf="384">
             <div class="block">
-              <p padlength="0" lo="378" lf="382" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md">Markdown</a> | </p>
+              <p padlength="0" lo="378" lf="382">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
             </div>
           </li>
@@ -1895,14 +1895,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="384" lf="384"><a name="the-biot-savart-law" number="4.20" lo="384" raw="## The Biot--Savart law" class="anchor hanchor" href="#the-biot-savart-law" lf="384"><span class="hnumber">4.20</span>&nbsp;<span class="htext">The Biot–Savart law</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">385</span></div>
+        <h2 lo="384" lf="384"><a name="the-biot-savart-law" number="4.20" lo="384" raw="## The Biot--Savart law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.20</span>&nbsp;<span class="htext">The Biot–Savart law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">384</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="386" lf="386"><a name="rlc-and-ac-circuits" number="4.21" lo="386" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="386"><span class="hnumber">4.21</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">387</span></div>
+        <h2 lo="386" lf="386"><a name="rlc-and-ac-circuits" number="4.21" lo="386" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.21</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">386</span></div>
       </div>
     </div>
   </div>
