--- a/Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html
+++ b/Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#forces-on-straight-wires" raw="# Forces on Straight Wires" lo="5" class="">
+        <a href="#forces-on-straight-wires" raw="# Forces on Straight Wires" lo="5" class="highlighted">
           <span class="toctext">Forces on Straight Wires</span>
         </a>
         <ol class="toc" style="display: none;">
@@ -610,13 +610,13 @@ c-16-25.333-24-45-24-59z"></path>
   <div id="display">
     <div class="section">
       <div class="block">
-        <p padlength="0" lo="2" lf="2" class="title active">Magnetic Force and Torque on Current Loops</p>
+        <p padlength="0" lo="2" lf="2" class="title">Magnetic Force and Torque on Current Loops</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">2</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5" class=""><a name="forces-on-straight-wires" number="1" lo="5" raw="# Forces on Straight Wires" class="anchor hanchor" href="#forces-on-straight-wires"><span class="hnumber">1</span>&nbsp;<span class="htext">Forces on Straight Wires</span></a></h1>
+        <h1 lo="5" lf="5" class="highlighted"><a name="forces-on-straight-wires" number="1" lo="5" raw="# Forces on Straight Wires" class="anchor hanchor" href="#forces-on-straight-wires"><span class="hnumber">1</span>&nbsp;<span class="htext">Forces on Straight Wires</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -636,7 +636,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="11" lf="11"><span len="41" raw="__\bfvec{F} = q\bfvec{v}\times\bfvec{B}__" class="katex-display fleqn"><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="11" lf="11" class="active"><span len="41" raw="__\bfvec{F} = q\bfvec{v}\times\bfvec{B}__" class="katex-display fleqn"><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                   <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
